Ajout tableau et formulaire

--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -11,7 +11,7 @@
 	<body>
 		<!-- Corps du site web -->
 		<h2> Page 1</h2>
-		<a href="../Index.html" class="class_hover"> Retour</a></p>
+		<a href="https://newton130.github.io" class="class_hover"> Retour</a></p>
 		
 		<div class="class_partie">
 			<p> Premier paragraphe de mon site web </p>
