--- a/index.html
+++ b/index.html
@@ -125,7 +125,55 @@
 				<div class="class_position">
 					<div class="class_boite_pos1"><p><center>🚓 </center></p></div>
 					<div class="class_boite_pos2"><p><center>🌏 </center></p></div>
-					<div class="class_boite_pos3"><p><center>¯\_(ツ)_/¯ </center></p></div>
+					<div class="class_boite_pos3"><p><center><strong>¯\_(ツ)_/¯ </strong></center></p></div>
+				</div>
+			</div>
+			<br>
+			
+			<!-- Septème partie: les tableaux -->
+			<div class="class_partie">
+				<h2 id="id_tableaux"> Septème partie: les tableaux </h2>
+				<div>
+					<table>
+						<caption><strong>Liste de tanks </strong></caption>
+						<tr>
+							<th>Nation</th>
+							<th>Type</th>
+							<th>Modèle</th>
+						</tr>
+						<tr>
+							<td>France</td>
+							<td>Lourd</td>
+							<td>AMX 50</td>
+						</tr>
+						<tr>
+							<td>USA</td>
+							<td>Chasseur</td>
+							<td>T28</td>
+						</tr>
+						<tr>
+							<td>URSS</td>
+							<td>Lourd</td>
+							<td>IS3</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<br>
+			
+			<!-- Huitième partie: les formulaires -->
+			<div class="class_partie">
+				<h2 id="id_formulaires"> Huitième partie: les formulaires </h2>
+				<div>
+					<form method:"get" action:"none">
+						<label for="id_prenom">Votre prénom : </label>
+						<input type="text" name="prenom" id="id_prenom" placeholder="Saisir ici">
+						<br><br>
+						<label for="id_commentaire">Commentaire : </label><br>
+						<textarea name="commentaire" id="id_commentaire" placeholder="Saisir ici" size=200></textarea>
+						<br><br>
+						<input type="submit" value="Envoyer">
+					</form>
 				</div>
 			</div>
 			<br>
