Ajout ppt architecture et modif dossiers

--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -6,7 +6,7 @@
 		<!-- Nom de la page web -->
 		<title>Le site de Clément</title>
 		<!-- Lier un fichier de style -->
-		<link href="../style.css" rel="stylesheet">
+		<link href="../Styles/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Corps du site web -->
