--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!-- Nom de la page web -->
 		<title>Le site de Clément</title>
 		<!-- Lier un fichier de style -->
-		<link href="style.css" rel="stylesheet">
+		<link href="Styles/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -32,6 +32,7 @@
 			<div class="class_baniere">
 				<center>
 					<h1> Bienvenu sur mon site web ! </h1>
+					<p> Qu'est-ce que tu fais là ? Tu t'es perdu ? </p>
 				</center>
 			</div>
 			<center>
