--- a/index.html
+++ b/index.html
@@ -4,190 +4,52 @@
 		<!-- Encodage des caractères spéciaux -->
 		<meta charset="utf-8">
 		<!-- Nom de la page web -->
-		<title>Le site de Clément</title>
+		<title>...</title>
 		<!-- Lier un fichier de style -->
-		<link href="Styles/style.css" rel="stylesheet">
+		<link href="Styles/style_global.css" rel="stylesheet">
+		<link href="Styles/style_feuilles.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
-			<!-- En-tête -->
 			<div>
-				<h1> ClmZn </h1>
+				<!-- En-tête -->
 			</div>
 		</header>
 		
 		<nav>
-			<!-- menu -->
-			<p> Menu </p>
-			<ul>
-				<li>Les bases</li>
-				<li>Les listes</li>
-				<li>Les liens</li>
-				<li>Les containers</li>
-			</ul>
+			<!-- Navigation -->
 		</nav>
 		
 		<main>
 			<!-- Corps du site web -->
-			<div class="class_baniere">
-				<center>
-					<h1> Bienvenu sur mon site web ! </h1>
-					<p> Qu'est-ce que tu fais là ? Tu t'es perdu ? </p>
-				</center>
-			</div>
-			<center>
-				<p class="class_p_alt"> <strong>Plan du site:</strong></p>
-				<p><ol>
-					<li><a href="#id_bases"> Les bases</a></li>
-					<li><a href="#id_listes"> Les listes</a></li>
-					<li><a href="#id_liens"> Les liens</a></li>
-					<li><a href="#id_containers"> Les containers</a></li>
-				</ol></p>
-				<a href="Images/img_ariane5.png"><img src="Images/img_mini_ariane5.png" title="Ariane 5" alt="Illustration artistique d'Ariane 5" class="class_image"></a>
-			</center>
-			<br><br>
-			
-			<!-- Premiere partie: les bases -->
-			<div class="class_partie">
-				<h2 id="id_bases"> Premiere partie: les bases </h2>
-				<p> Paragraphe, <br> avec un retour à la ligne en utilisant une balise break </p>
-			</div>
-			<br>
-			
-			<!-- Deuxième partie: les listes -->
-			<div class="class_partie">
-				<h2 id="id_listes"> Deuxième partie: les listes </h2>
-				<div>
-					<p> Liste des choses que je sais pour l'instant: <em>(sans ordre)</em>
-						<ul>
-							<li> Mettre un <strong>titre</strong> à la page web </li>
-							<li> Faire des <strong>chapitres</strong> </li>
-							<li> <strong>Commenter</strong> mon code </li>
-						</ul>
-					</p>
-				</div>
-				<div>
-					<p> Recette pour faire des pâtes: <em>(avec ordre)</em> <br>
-						<ol>
-							<li> Faire <strong>bouillir</strong> de l'eau </li>
-							<li> Plonger les pâtes </li>
-							<li> Ne pas oublier les pâtes </li>
-							<li> Sortir et <strong>égouter</strong> les pâtes </li>
-						</ol>
-					</p>
+			<div class=class_table>
+				<div class=class_tas_feuilles>
+					<a href="Pages/Page1.html">
+						<div class=class_feuille1>
+							<p><em>Formation</em></p>
+						</div>
+					</a>
+					<a href="Pages/Page2.html">
+						<div class=class_feuille2>
+							<p><em>Expériences<br>professionnelles</em></p>
+						</div>
+					</a>
+					<a href="Pages/Page3.html">
+						<div class=class_feuille3>
+							<p><em>Centres d'intérêt</em></p>
+						</div>
+					</a>
+					<a href="Pages/Page4.html">
+						<div class=class_feuille4>
+							<p><em>Et encore...</em></p>
+						</div>
+					</a>
 				</div>
 			</div>
-			<br>
-			
-			<!-- Troisième partie: les liens hypertexte -->
-			<div class="class_partie">
-				<h2 id="id_liens"> Troisième partie: les liens hypertexte </h2>
-				<p> 
-					Lien vers un site particulier:
-					<a href="https://openclassrooms.com/fr/"> OpenClassrooms </a>
-					<br>
-					Lien vers une page de mon dossier:
-					<a href="Pages/Page1.html"> Page 1 </a>
-				</p>
-			</div>
-			<br>
-			
-			<!-- Quatrième partie: les conteneurs -->
-			<div class="class_partie">
-				<h2 id="id_containers"> Quatrième partie: les conteneurs </h2>
-				<div class="class_conteneur">
-					<div class="class_partie"><p>Bla </p></div>
-					<div class="class_partie"><p>Ble </p></div>
-					<div class="class_partie"><p>Bli </p></div>
-					<div class="class_partie"><p>Blo </p></div>
-					<div class="class_partie"><p>Blu </p></div>
-					<div class="class_partie"><p>Bly </p></div>
-				</div>
-			</div>
-			<br>
-			
-			<!-- Cinquième partie: les grilles -->
-			<div class="class_partie">
-				<h2 id="id_grids"> Cinquième partie: les grilles </h2>
-				<div class="class_grid">
-					<div class="class_boite1"><p><center>Bla </center></p></div>
-					<div class="class_boite2"><p><center>Ble </center></p></div>
-					<div class="class_boite3"><p><center>Bli </center></p></div>
-					<div class="class_boite4"><p><center>Blo </center></p></div>
-					<div class="class_boite5"><p><center>Blu </center></p></div>
-					<div class="class_boite6"><p><center>Bly </center></p></div>
-				</div>
-			</div>
-			<br>
-			
-			<!-- Sixième partie: les positions -->
-			<div class="class_partie">
-				<h2 id="id_positions"> Sixième partie: les positions </h2>
-				<div class="class_position">
-					<div class="class_boite_pos1"><p><center>🚓 </center></p></div>
-					<div class="class_boite_pos2"><p><center>🌏 </center></p></div>
-					<div class="class_boite_pos3"><p><center><strong>¯\_(ツ)_/¯ </strong></center></p></div>
-				</div>
-			</div>
-			<br>
-			
-			<!-- Septème partie: les tableaux -->
-			<div class="class_partie">
-				<h2 id="id_tableaux"> Septème partie: les tableaux </h2>
-				<div>
-					<table>
-						<caption><strong>Liste de tanks </strong></caption>
-						<tr>
-							<th>Nation</th>
-							<th>Type</th>
-							<th>Modèle</th>
-						</tr>
-						<tr>
-							<td>France</td>
-							<td>Lourd</td>
-							<td>AMX 50</td>
-						</tr>
-						<tr>
-							<td>USA</td>
-							<td>Chasseur</td>
-							<td>T28</td>
-						</tr>
-						<tr>
-							<td>URSS</td>
-							<td>Lourd</td>
-							<td>IS3</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<br>
-			
-			<!-- Huitième partie: les formulaires -->
-			<div class="class_partie">
-				<h2 id="id_formulaires"> Huitième partie: les formulaires </h2>
-				<div>
-					<form method:"get" action:"none">
-						<label for="id_prenom">Votre prénom : </label>
-						<input type="text" name="prenom" id="id_prenom" placeholder="Saisir ici">
-						<br><br>
-						<label for="id_commentaire">Commentaire : </label><br>
-						<textarea name="commentaire" id="id_commentaire" placeholder="Saisir ici" size=200></textarea>
-						<br><br>
-						<input type="submit" value="Envoyer">
-					</form>
-				</div>
-			</div>
-			<br>
 		</main>
 		
-		<aside class="class_partie">
-			<!-- Espace sur le côté  -->
-			<p> Aside </p>
-		</aside>
-			
 		<footer>
 			<!-- Pied de page -->
-			<p> Pied de page </p>
 		</footer>
 	</body>
 </html>
