--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -6,17 +6,19 @@
 		<!-- Nom de la page web -->
 		<title>Le site de Clément</title>
 		<!-- Lier un fichier de style -->
-		<link href="../Styles/style.css" rel="stylesheet">
+		<link href="../Styles/style_global.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Corps du site web -->
-		<h2> Page 1</h2>
-		<a href="https://newton130.github.io" class="class_hover"> Retour</a></p>
+		<div>
+		<h1> Formation</h1>
+			<p>
+				<a href="../index.html" class="class_hover"> Retour</a>
+			</p>
+		</div>
 		
-		<div class="class_partie">
-			<p> Premier paragraphe de mon site web </p>
-			<p> Deuxième paragraphe, <br> avec un retour à la ligne en utilisant une balise break</p>
-			<a href="../Images/img_ariane5.png"><img src="../Images/img_mini_ariane5.png" title="Ariane 5" alt="Illustration artistique d'Ariane 5"></a>
+		<div>
+			<p> bla </p>
 		</div>
 	</body>
 </html>
