Modification table. Centrage. Pied de page. Modification pages.

--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -4,21 +4,26 @@
 		<!-- Encodage des caractères spéciaux -->
 		<meta charset="utf-8">
 		<!-- Nom de la page web -->
-		<title>Le site de Clément</title>
+		<title>newton130</title>
 		<!-- Lier un fichier de style -->
 		<link href="../Styles/style_global.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Corps du site web -->
 		<div>
-		<h1> Formation</h1>
-			<p>
-				<a href="../index.html" class="class_hover"> Retour</a>
+		<h1>Formation</h1>
+			<p>← 
+				<a href="../index.html" class="class_hover">Retour</a>
 			</p>
 		</div>
 		
 		<div>
-			<p> bla </p>
+			<p>Voici mon parcour scolaire : <br>
+			<ul>
+				<li>Polytech'Orléans</li>
+				<li>Master M.A.R.S.</li>
+			</ul>
+			</p>
 		</div>
 	</body>
 </html>
