--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Encodage des caractères spéciaux -->
 		<meta charset="utf-8">
 		<!-- Nom de la page web -->
-		<title>...</title>
+		<title>newton130</title>
 		<!-- Lier un fichier de style -->
 		<link href="Styles/style_global.css" rel="stylesheet">
 		<link href="Styles/style_feuilles.css" rel="stylesheet">
@@ -13,6 +13,7 @@
 		<header>
 			<div>
 				<!-- En-tête -->
+				<center><h1>Bienvenue sur mon site</h1></center>
 			</div>
 		</header>
 		
@@ -26,22 +27,22 @@
 				<div class=class_tas_feuilles>
 					<a href="Pages/Page1.html">
 						<div class=class_feuille1>
-							<p><em>Formation</em></p>
+							<p><em><strong>Formation</strong></em></p>
 						</div>
 					</a>
 					<a href="Pages/Page2.html">
 						<div class=class_feuille2>
-							<p><em>Expériences<br>professionnelles</em></p>
+							<p><em><strong>Expériences<br>professionnelles</strong></em></p>
 						</div>
 					</a>
 					<a href="Pages/Page3.html">
 						<div class=class_feuille3>
-							<p><em>Centres d'intérêt</em></p>
+							<p><em><strong>Centres d'intérêt</strong></em></p>
 						</div>
 					</a>
 					<a href="Pages/Page4.html">
 						<div class=class_feuille4>
-							<p><em>Et encore...</em></p>
+							<p><em><strong>Et encore...</strong></em></p>
 						</div>
 					</a>
 				</div>
@@ -49,7 +50,7 @@
 		</main>
 		
 		<footer>
-			<!-- Pied de page -->
+			<p>Site développé par newton130.<br>En cours d'apprentissage HTML5 et CSS3. Pas de PHP pour le moment...</p>
 		</footer>
 	</body>
 </html>
