--- a/Pages/Page2.html
+++ b/Pages/Page2.html
@@ -4,17 +4,26 @@
 		<!-- Encodage des caractères spéciaux -->
 		<meta charset="utf-8">
 		<!-- Nom de la page web -->
-		<title>Le site de Clément</title>
+		<title>newton130</title>
 		<!-- Lier un fichier de style -->
-		<link href="../Styles/style.css" rel="stylesheet">
+		<link href="../Styles/style_global.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Corps du site web -->
-		<h2> Page 1</h2>
-		<a href="../index.html" class="class_hover"> Retour</a></p>
+		<div>
+		<h1>Expériences professionnelles</h1>
+			<p>← 
+				<a href="../index.html" class="class_hover">Retour</a>
+			</p>
+		</div>
 		
 		<div>
-			<p> bla </p>
+			<p>Voici mes expériences professionnelles : <br>
+			<ul>
+				<li>ALTEN (pour PSA)</li>
+				<li>Technology and Strategy (pour BOSCH)</li>
+			</ul>
+			</p>
 		</div>
 	</body>
 </html>
