Ajout CV. Réduction de l'echelle

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
 					</a>
 					<a href="Pages/Page4.html">
 						<div class=class_feuille4>
-							<p><em><strong>Et encore...</strong></em></p>
+							<p><em><strong>Autres...</strong></em></p>
+						</div>
+					</a>
+					<a href="Pages/CV_anonyme.pdf">
+						<div class=class_feuille5>
+							<!-- <p><strong> </strong></p> -->
 						</div>
 					</a>
 				</div>
