Tentative bugfix cv mini

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE=html>
+<!DOCTYPE html>
 <html lang="fr">
 	<head>
 		<!-- Encodage des caractères spéciaux -->
@@ -13,7 +13,7 @@
 		<header>
 			<div>
 				<!-- En-tête -->
-				<center><h1>Bienvenue sur mon site</h1></center>
+				<h1><center>Bienvenue sur mon site</center></h1>
 			</div>
 		</header>
 		
