Développement page formation

--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -7,23 +7,92 @@
 		<title>newton130</title>
 		<!-- Lier un fichier de style -->
 		<link href="../Styles/style_global.css" rel="stylesheet">
+		<link href="../Styles/style_pages.css" rel="stylesheet">
 	</head>
 	<body>
-		<!-- Corps du site web -->
-		<div>
-		<h1>Formation</h1>
-			<p>← 
-				<a href="../index.html" class="class_hover">Retour</a>
-			</p>
-		</div>
+		<header> <!-- En-tête -->
+			<div class=class_titre_page>
+				<h1><center>Formation</center></h1>
+			</div>
+		</header>
 		
-		<div>
-			<p>Voici mon parcour scolaire : <br>
-			<ul>
-				<li>Polytech'Orléans</li>
-				<li>Master M.A.R.S.</li>
-			</ul>
+		<main> <!-- Main -->
+			<p>
+				← <a href="../index.html" class="class_hover">Retour</a>
 			</p>
-		</div>
+	
+		
+			<div class=class_zone_page>
+				<p>
+					<h2>Diplômes</h2>
+					<ul>
+						<li><a href="#id_part_inge">Diplôme d'ingénieur en "Mécanique, Matériaux et Mécatronique"</a></li>
+						<li><a href="#id_part_mars">Master M.A.R.S. (double diplôme)</a></li>
+					</ul>
+				</p>
+			</div>
+			
+			<div class=class_image_biblio>
+				<!-- Image bibliothèque -->
+			</div>
+			<div class=class_zone_page id=id_part_inge>
+				<h2>Diplôme d'ingénieur</h2>
+				<p>
+					Spécialisation officielle : "Mécanique, Matériaux et Mécatronique"<br>
+					Spécialisation avant changement de nom : "Mécatronique et Conception de Systèmes".<br>
+					École : Polytech Orléans. <br>
+					<br>
+					Projets :
+					<ul>
+						<li>Conception d'une presse d’emboutissage de 200kN. (3 mois à temps plein)</li>
+						<ul>
+							<li>Définition de l'architecture du système en SysML</li>
+							<li>Conception mécanique.</li>
+							<li>CAO sur Catia V6.</li>
+						</ul>
+						<li>Pile à Combustible. (3 mois à temps partiel)</li>
+						<ul>
+							<li>Installation</li>
+							<li>Mise en fonctionnement</li>
+							<li>Rédaction de protocoles d'utilisation de la pile</li>
+							<li>Amélioration de l'IHM.</li>
+						</ul>
+					</ul>
+					<br>
+					Sujets étudiés :
+					<ul>
+						<li>Architecture système (SysML)</li>
+						<li>Mécanique (statique, cinématique et dynamique)</li>	
+						<li>Dimentionnement mécanique</li>
+						<li>Hydraulique</li>
+						<li>Matériaux</li>
+						<li>CAO (Catia V6, Solidedge)</li>
+						<li>Électronique</li>
+						<li>Électrotechnique</li>
+						<li>Automatique continue et séquentielle</li>
+						<li>Traitement signal</li>
+						<li>C++</li>
+						<li>Thermodynamique</li>
+						<li>Tribologie</li>
+					</ul>
+				</p>
+			</div>
+				
+			<div class=class_zone_page id=id_part_mars>
+				<h2>Master M.A.R.S.</h2>
+				<p>
+					Mécatronique, Automatisme, Robotique et Signal<br>
+					Master en double diplôme<br>
+					Université d'Orléans<br>
+				</p>
+			</div>
+			<p>
+				← <a href="../index.html" class="class_hover">Retour</a>
+			</p>
+		<main>
+		
+		<footer>
+			<p>Site développé par newton130.<br>En cours d'apprentissage HTML5 et CSS3. Pas de PHP pour le moment...</p>
+		</footer>
 	</body>
 </html>
