Ajout images et travail sur page 3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- Lier un fichier de style -->
 		<link href="Styles/style_global.css" rel="stylesheet">
 		<link href="Styles/style_feuilles.css" rel="stylesheet">
+		<link href="Styles/style_images.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
