bugfix de la balise main

--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -103,7 +103,7 @@
 			<p>
 				← <a href="../index.html" class="class_hover">Retour</a>
 			</p>
-		<main>
+		</main>
 		
 		<footer>
 			<p>Site développé par newton130.<br>En cours d'apprentissage HTML5 et CSS3. Pas de PHP pour le moment...</p>
