--- a/Pages/Page3.html
+++ b/Pages/Page3.html
@@ -41,7 +41,7 @@
 			</div>
 			
 			<div class=class_zone_page id=id_part_astro>
-				<h2>Astonaumie</h2>
+				<h2>Astronaumie</h2>
 				<p>
 					Mon téléscope :
 					<ul>
@@ -120,7 +120,7 @@
 			<p>
 				← <a href="../index.html" class="class_hover">Retour</a>
 			</p>
-		<main>
+		</main>
 		
 		<footer>
 			<p>Site développé par newton130.<br>En cours d'apprentissage HTML5 et CSS3. Pas de PHP pour le moment...</p>
