Ajout Jupiter page 3

--- a/Pages/Page1.html
+++ b/Pages/Page1.html
@@ -52,19 +52,21 @@
 				<p>
 					Projets :
 					<ul>
-						<li>Conception d'une presse d’emboutissage de 200kN. (3 mois à temps plein)</li>
-						<ul>
-							<li>Définition de l'architecture du système en SysML</li>
-							<li>Conception mécanique.</li>
-							<li>CAO sur Catia V6.</li>
-						</ul><br>
-						<li>Pile à Combustible. (3 mois à temps partiel)</li>
-						<ul>
-							<li>Installation</li>
-							<li>Mise en fonctionnement</li>
-							<li>Rédaction de protocoles d'utilisation de la pile</li>
-							<li>Amélioration de l'IHM.</li>
-						</ul>
+						<li>Conception d'une presse d’emboutissage de 200kN. (3 mois à temps plein)
+							<ul>
+								<li>Définition de l'architecture du système en SysML</li>
+								<li>Conception mécanique.</li>
+								<li>CAO sur Catia V6.</li>
+							</ul><br>
+						</li>
+						<li>Pile à Combustible. (3 mois à temps partiel)
+							<ul>
+								<li>Installation</li>
+								<li>Mise en fonctionnement</li>
+								<li>Rédaction de protocoles d'utilisation de la pile</li>
+								<li>Amélioration de l'IHM.</li>
+							</ul>
+						</li>
 					</ul>
 				</p>
 				
